welcome.lessons.welcome.array.array667.Array667.scala.error
array667:3: error: '(' expected but 'var' found.
  var a:Int=0
  ^